--- a/david-neher-portfolio.html
+++ b/david-neher-portfolio.html
@@ -305,10 +305,10 @@
                 <a href="#" class="cta-btn primary" onclick="alert('Resume download would trigger here. Add your resume PDF link.'); return false;">
                     📄 Download Resume
                 </a>
-                <a href="mailto:your.email@example.com" class="cta-btn">
+                <a href="mailto:david.neher1@gmail.com" class="cta-btn">
                     ✉️ Email Me
                 </a>
-                <a href="https://linkedin.com/in/yourprofile" target="_blank" class="cta-btn">
+                <a href="https://linkedin.com/in/david-neher" target="_blank" class="cta-btn">
                     💼 LinkedIn
                 </a>
                 <a href="https://calendly.com/yourlink" target="_blank" class="cta-btn">
