--- a/david-neher-portfolio.html
+++ b/david-neher-portfolio.html
@@ -302,7 +302,7 @@
             <p>Building exceptional healthcare products for 8+ years. Passionate about creating user-centered solutions that improve patient outcomes and streamline clinical workflows.</p>
             
             <div class="cta-grid">
-                <a href="#" class="cta-btn primary" onclick="alert('Resume download would trigger here. Add your resume PDF link.'); return false;">
+                <a href="David Neher Resume_Product Mgmt_Focused_v2-2.pdf" class="cta-btn primary" onclick="alert('Resume download would trigger here. Add your resume PDF link.'); return false;">
                     📄 Download Resume
                 </a>
                 <a href="mailto:david.neher1@gmail.com" class="cta-btn">
